<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        tools:context=".view.ListMeetingFragment"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_meeting"
        android:id="@+id/list_meeting"
        android:name="com.uimainon.mareus.view.ListMeetingFragment"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/recycler_meeting_list_margin"
        android:layout_marginRight="@dimen/recycler_meeting_list_margin"
        android:visibility="visible"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textViewNothing"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nothingMeeting" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_new_metting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_end_add_btn"
        android:layout_marginBottom="@dimen/margin_bottom_add_btn"
        tools:srcCompat="@drawable/ic_add_24px"
        app:srcCompat="@drawable/ic_add_24px" />


</RelativeLayout>