<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textNoParticpantDispo"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nothingParticipant" />


</RelativeLayout>