<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/contain_calendar_dialog_meeting"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageButton
            android:backgroundTint="@android:color/transparent"
            android:foregroundTint="@android:color/transparent"
            android:tint="@android:color/transparent"
            android:id="@+id/btn_close_dialog_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            app:srcCompat="@android:drawable/btn_dialog" />

        <CalendarView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/calendar_dialog_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>