<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container_text_button_grid"
        android:orientation="horizontal">

        <ImageButton
            android:backgroundTint="@android:color/transparent"
            android:foregroundTint="@android:color/transparent"
            android:tint="@android:color/transparent"
            android:id="@+id/btn_close_dialog_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/nothingMeetingDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/nothing_metting_dial" />

    </RelativeLayout>
</LinearLayout>